gcc/testsuite/rust/rustc/ui/parser/diff-markers/item-with-attr_dg.rs
#[attribute]
<<<<<<< HEAD // { dg-error "" "" { target *-*-* } }
fn foo() {}
=======
fn bar() {}
>>>>>>> branch

fn main() {
    foo();
}

